LMS-0391/force-app/main/default/objects/Debug_Log__c/Debug_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to log error, info from custom code</description>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>