LMS-0391/force-app/main/default/objects/Debug_Log__c/fields/Debug_Level__c.field-meta.xml
<CustomField>
    <fullName>Debug_Level__c</fullName>
    <label>Debug Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>