LMS-0391/force-app/main/default/objects/Debug_Log__c/fields/Log_Message__c.field-meta.xml
<CustomField>
    <fullName>Log_Message__c</fullName>
    <label>Log Message</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>