LMS-0391/force-app/main/default/objects/Debug_Log__c/fields/Reference_Link__c.field-meta.xml
<CustomField>
    <fullName>Reference_Link__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Reference_Id__c)),
    HYPERLINK(
        LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Reference_Id__c,
        &apos;Click To View Reference Record&apos;,
        &apos;_blank&apos;
    ),
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Link</label>
    <type>Text</type>
</CustomField>