LMS-0391/force-app/main/default/objects/Debug_Log__c/fields/Short_Message__c.field-meta.xml
<CustomField>
    <fullName>Short_Message__c</fullName>
    <label>Short Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>