LMS-0391/force-app/main/default/objects/Debug_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Short_Message__c</columns>
    <columns>Source_Class__c</columns>
    <columns>Source_Function__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>